--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,10 @@ p:first-child{
 	font-style:bold;
 }
 
-p:nth-child(2){
+p:nth-child(3){
 	font-style:italic;
 }
 
+div {
+	border:2px solid greem;
+}
