--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,8 @@ a:hover{
 	text-decoration: none;
 }
 
+a:
+
 div {
 	border:3px solid green;
 	margin-left: 5px;
@@ -15,16 +17,17 @@ div {
 	margin-bottom: 5px
 }
 
-.button{
-    height:50px;
-    width:120px;
+.Button {
+    height:30px;
+    width:100px;
     border-color:green;
     border-width:2px;
     border-style:solid;
-    background:#BCD2EE;
-    border-radius:5px;
+    background:lightgray;
+    border-radius:3px;
     text-align:center;
     margin:auto; 
+    display:inline-block;
 }
 
 h1 {
