--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ div {
     background:lightgray;
     border-radius:3px;
     text-align:center;
-    margin:auto; 
+    margin:2px; 
     display:inline-block;
 }
 
