--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,10 @@ a:hover{
 	text-decoration: none;
 }
 
-a:
+a:visited{
+	color: lightgreen;
+	text-decoration: none;
+}
 
 div {
 	border:3px solid green;
