--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,8 +14,8 @@ a:visited{
 }
 
 #Button {
-    height:30px;
-    width:100px;
+    height:35px;
+    width:110px;
     border-color:green;
     border-width:2px;
     border-style:solid;
@@ -23,6 +23,7 @@ a:visited{
     border-radius:3px;
     text-align:center;
     margin:2px; 
+    display:inline-block;
 }
 
 div {
