--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,9 +39,8 @@ h1 {
 	text-align:center;
 	position: fixed;
 	left: 50%;
-	margin-left: -500px;
-	height: 100px;
-	width:1000px;
+	margin-left:25%;
+	width:50%;
 }
 
 h3 {
