--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ a:visited{
 div {
 	border:3px solid green;
 	margin-left: 5px;
-	margin-top: 5px;
+	margin-top: px;
 	margin-bottom: 5px;
 }
 
@@ -40,6 +40,7 @@ h1 {
 	position: fixed;
 	left: 50%;
 	margin-left:25%;
+	height: 3em;
 	width:50%;
 }
 
