--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,8 +39,8 @@ h1 {
 	margin-top:-1.5em;
 	text-align:center;
 	position: fixed;
-	margin-left:25%;
-	width:50%;
+	width:100%;
+	background:white;
 }
 
 h3 {
@@ -48,7 +48,7 @@ h3 {
 }
 
 p {
-	margin-left: 10em;
+	margin-left: 20px;
 }
 
 p:first-child{
