--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,12 +23,12 @@ a:visited{
     border-radius:3px;
     text-align:center;
     margin:2px; 
-    position:fixed;
+    position:relative;
 }
 
 div {
 	border:3px solid green;
-	margin-left: 5px;
+	margin-left: 10em;
 	margin-top: 3em;
 	margin-bottom: 5px;
 }
