--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a:visited{
     border-radius:3px;
     text-align:center;
     margin:2px; 
-    position:relative;
+    position:fixed;
 }
 
 div {
