--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ a:visited{
 	text-decoration: none;
 }
 
-button {
+#button {
     height:40px;
     width:120px;
     border-color:green;
@@ -25,11 +25,11 @@ button {
     margin-left:15px; 
     position:fixed;
 }
-#1st {
+.1st {
 	margin-top:10px;
 }
 
-#2nd {
+.2nd {
 	margin-top:140px;
 }
 
