--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ a:visited{
 	text-decoration: none;
 }
 
-#button {
+#button1 {
     height:40px;
     width:120px;
     border-color:green;
@@ -25,8 +25,59 @@ a:visited{
     margin:3px; 
     position:fixed;
 }
-div:nthchild(2) {
-	margin-top:140px; 
+
+#button2 {
+    height:40px;
+    width:120px;
+    border-color:green;
+    border-width:2px;
+    border-style:solid;
+    background:white;
+    border-radius:3px;
+    text-align:center;
+    margin:3px; 
+    position:fixed;
+}
+
+#button3 {
+    height:40px;
+    width:120px;
+    border-color:green;
+    border-width:2px;
+    border-style:solid;
+    background:white;
+    border-radius:3px;
+    text-align:center;
+    margin:3px; 
+    position:fixed;
+}
+
+#button4 {
+    height:40px;
+    width:120px;
+    border-color:green;
+    border-width:2px;
+    border-style:solid;
+    background:white;
+    border-radius:3px;
+    text-align:center;
+    margin:3px; 
+    position:fixed;
+}
+
+#button5 {
+    height:40px;
+    width:120px;
+    border-color:green;
+    border-width:2px;
+    border-style:solid;
+    background:white;
+    border-radius:3px;
+    text-align:center;
+    margin:3px; 
+    position:fixed;
+}
+
 }
 
 div {
