--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ a:visited{
 	text-decoration: none;
 }
 
-#button {
+#Button {
     height:40px;
     width:120px;
     border-color:green;
@@ -22,21 +22,15 @@ a:visited{
     background:white;
     border-radius:3px;
     text-align:center;
-    margin:3px; 
+    margin:2px; 
     position:fixed;
-}
-
 }
 
 div {
 	border:3px solid green;
-	margin-left: 10em;
+	margin-left: 5px;
 	margin-top: 3em;
 	margin-bottom: 5px;
-}
-
-#first {
-	margin-left:150px;
 }
 
 
