--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a:visited{
     border-radius:3px;
     text-align:center;
     margin:2px; 
-    float:left;
+    position:fixed;
     z-index:1;
 }
 
