--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,13 +24,14 @@ a:visited{
     text-align:center;
     margin-left:0px; 
     position:fixed;
-    margin-top: 60px;
+    margin-top: 40px;
     z-index:1;
+    vertical-align:text-middle;
 }
 
 div {
 	border:3px solid green;
-	margin-left: 160px;
+	margin-left: 145px;
 	margin-top: 3em;
 	margin-bottom: 5px;
 }
@@ -43,6 +44,9 @@ h1 {
 	position: fixed;
 	width:100%;
 	background:white;
+	border-color:green
+	border-width:2px
+	border-style:solid
 }
 
 h3 {
