--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ a:visited{
     position:fixed;
     margin-top: 40px;
     z-index:1;
-    vertical-align:text-middle;
+    vertical-align:middle;
 }
 
 div {
